--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,12 @@
     "flv.js": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-form": "^8.3.8",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
